content/_generated-doc/2.13/config/quarkus-oidc-oidc-tenant-config-logout.adoc

:summaryTableId: quarkus-oidc-oidc-tenant-config-logout
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-oidc-tenant-config-logout_configuration]]link:#quarkus-oidc-oidc-tenant-config-logout_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.path]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.path[quarkus.oidc.logout.path]`

[.description]
--
The relative path of the logout endpoint at the application. If provided, the application is able to initiate the logout through this endpoint in conformance with the OpenID Connect RP-Initiated Logout specification.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_LOGOUT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_LOGOUT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.post-logout-path]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.post-logout-path[quarkus.oidc.logout.post-logout-path]`

[.description]
--
Relative path of the application endpoint where the user should be redirected to after logging out from the OpenID Connect Provider. This endpoint URI must be properly registered at the OpenID Connect Provider as a valid redirect URI.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_LOGOUT_POST_LOGOUT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_LOGOUT_POST_LOGOUT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.post-logout-uri-param]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.post-logout-uri-param[quarkus.oidc.logout.post-logout-uri-param]`

[.description]
--
Name of the post logout URI parameter which will be added as a query parameter to the logout redirect URI.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_LOGOUT_POST_LOGOUT_URI_PARAM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_LOGOUT_POST_LOGOUT_URI_PARAM+++`
endif::add-copy-button-to-env-var[]
--|string 
|`post_logout_redirect_uri`


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.backchannel.path]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.backchannel.path[quarkus.oidc.logout.backchannel.path]`

[.description]
--
The relative path of the Back-Channel Logout endpoint at the application.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_LOGOUT_BACKCHANNEL_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_LOGOUT_BACKCHANNEL_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.extra-params-extra-params]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.extra-params-extra-params[quarkus.oidc.logout.extra-params]`

[.description]
--
Additional properties which will be added as the query parameters to the logout redirect URI.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_LOGOUT_EXTRA_PARAMS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_LOGOUT_EXTRA_PARAMS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.path]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.path[quarkus.oidc."tenant".logout.path]`

[.description]
--
The relative path of the logout endpoint at the application. If provided, the application is able to initiate the logout through this endpoint in conformance with the OpenID Connect RP-Initiated Logout specification.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__LOGOUT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__LOGOUT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.post-logout-path]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.post-logout-path[quarkus.oidc."tenant".logout.post-logout-path]`

[.description]
--
Relative path of the application endpoint where the user should be redirected to after logging out from the OpenID Connect Provider. This endpoint URI must be properly registered at the OpenID Connect Provider as a valid redirect URI.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__LOGOUT_POST_LOGOUT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__LOGOUT_POST_LOGOUT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.post-logout-uri-param]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.post-logout-uri-param[quarkus.oidc."tenant".logout.post-logout-uri-param]`

[.description]
--
Name of the post logout URI parameter which will be added as a query parameter to the logout redirect URI.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__LOGOUT_POST_LOGOUT_URI_PARAM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__LOGOUT_POST_LOGOUT_URI_PARAM+++`
endif::add-copy-button-to-env-var[]
--|string 
|`post_logout_redirect_uri`


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.extra-params-extra-params]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.extra-params-extra-params[quarkus.oidc."tenant".logout.extra-params]`

[.description]
--
Additional properties which will be added as the query parameters to the logout redirect URI.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__LOGOUT_EXTRA_PARAMS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__LOGOUT_EXTRA_PARAMS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.backchannel.path]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.backchannel.path[quarkus.oidc."tenant".logout.backchannel.path]`

[.description]
--
The relative path of the Back-Channel Logout endpoint at the application.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__LOGOUT_BACKCHANNEL_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__LOGOUT_BACKCHANNEL_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===