content/_generated-doc/3.6/config/quarkus-oidc-oidc-tenant-config-logout.adoc

:summaryTableId: quarkus-oidc-oidc-tenant-config-logout
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-oidc-tenant-config-logout_configuration]]link:#quarkus-oidc-oidc-tenant-config-logout_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.path]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.path[quarkus.oidc.logout.path]`


[.description]
--
The relative path of the logout endpoint at the application. If provided, the application is able to initiate the logout through this endpoint in conformance with the OpenID Connect RP-Initiated Logout specification.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_LOGOUT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_LOGOUT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.post-logout-path]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.post-logout-path[quarkus.oidc.logout.post-logout-path]`


[.description]
--
Relative path of the application endpoint where the user should be redirected to after logging out from the OpenID Connect Provider. This endpoint URI must be properly registered at the OpenID Connect Provider as a valid redirect URI.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_LOGOUT_POST_LOGOUT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_LOGOUT_POST_LOGOUT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.post-logout-uri-param]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.post-logout-uri-param[quarkus.oidc.logout.post-logout-uri-param]`


[.description]
--
Name of the post logout URI parameter which will be added as a query parameter to the logout redirect URI.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_LOGOUT_POST_LOGOUT_URI_PARAM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_LOGOUT_POST_LOGOUT_URI_PARAM+++`
endif::add-copy-button-to-env-var[]
--|string 
|`post_logout_redirect_uri`


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.backchannel.path]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.backchannel.path[quarkus.oidc.logout.backchannel.path]`


[.description]
--
The relative path of the Back-Channel Logout endpoint at the application.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_LOGOUT_BACKCHANNEL_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_LOGOUT_BACKCHANNEL_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.backchannel.token-cache-size]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.backchannel.token-cache-size[quarkus.oidc.logout.backchannel.token-cache-size]`


[.description]
--
Maximum number of logout tokens that can be cached before they are matched against ID tokens stored in session cookies.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_LOGOUT_BACKCHANNEL_TOKEN_CACHE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_LOGOUT_BACKCHANNEL_TOKEN_CACHE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.backchannel.token-cache-time-to-live]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.backchannel.token-cache-time-to-live[quarkus.oidc.logout.backchannel.token-cache-time-to-live]`


[.description]
--
Number of minutes a logout token can be cached for.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_LOGOUT_BACKCHANNEL_TOKEN_CACHE_TIME_TO_LIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_LOGOUT_BACKCHANNEL_TOKEN_CACHE_TIME_TO_LIVE+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10M`


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.backchannel.clean-up-timer-interval]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.backchannel.clean-up-timer-interval[quarkus.oidc.logout.backchannel.clean-up-timer-interval]`


[.description]
--
Token cache timer interval. If this property is set then a timer will check and remove the stale entries periodically.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_LOGOUT_BACKCHANNEL_CLEAN_UP_TIMER_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_LOGOUT_BACKCHANNEL_CLEAN_UP_TIMER_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.backchannel.logout-token-key]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.backchannel.logout-token-key[quarkus.oidc.logout.backchannel.logout-token-key]`


[.description]
--
Logout token claim whose value will be used as a key for caching the tokens. Only `sub` (subject) and `sid` (session id) claims can be used as keys. Set it to `sid` only if ID tokens issued by the OIDC provider have no `sub` but have `sid` claim.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_LOGOUT_BACKCHANNEL_LOGOUT_TOKEN_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_LOGOUT_BACKCHANNEL_LOGOUT_TOKEN_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`sub`


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.frontchannel.path]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.frontchannel.path[quarkus.oidc.logout.frontchannel.path]`


[.description]
--
The relative path of the Front-Channel Logout endpoint at the application.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_LOGOUT_FRONTCHANNEL_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_LOGOUT_FRONTCHANNEL_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.extra-params-extra-params]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.extra-params-extra-params[quarkus.oidc.logout.extra-params]`


[.description]
--
Additional properties which will be added as the query parameters to the logout redirect URI.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_LOGOUT_EXTRA_PARAMS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_LOGOUT_EXTRA_PARAMS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.path]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.path[quarkus.oidc."tenant".logout.path]`


[.description]
--
The relative path of the logout endpoint at the application. If provided, the application is able to initiate the logout through this endpoint in conformance with the OpenID Connect RP-Initiated Logout specification.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__LOGOUT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__LOGOUT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.post-logout-path]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.post-logout-path[quarkus.oidc."tenant".logout.post-logout-path]`


[.description]
--
Relative path of the application endpoint where the user should be redirected to after logging out from the OpenID Connect Provider. This endpoint URI must be properly registered at the OpenID Connect Provider as a valid redirect URI.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__LOGOUT_POST_LOGOUT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__LOGOUT_POST_LOGOUT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.post-logout-uri-param]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.post-logout-uri-param[quarkus.oidc."tenant".logout.post-logout-uri-param]`


[.description]
--
Name of the post logout URI parameter which will be added as a query parameter to the logout redirect URI.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__LOGOUT_POST_LOGOUT_URI_PARAM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__LOGOUT_POST_LOGOUT_URI_PARAM+++`
endif::add-copy-button-to-env-var[]
--|string 
|`post_logout_redirect_uri`


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.extra-params-extra-params]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.extra-params-extra-params[quarkus.oidc."tenant".logout.extra-params]`


[.description]
--
Additional properties which will be added as the query parameters to the logout redirect URI.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__LOGOUT_EXTRA_PARAMS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__LOGOUT_EXTRA_PARAMS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.backchannel.path]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.backchannel.path[quarkus.oidc."tenant".logout.backchannel.path]`


[.description]
--
The relative path of the Back-Channel Logout endpoint at the application.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__LOGOUT_BACKCHANNEL_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__LOGOUT_BACKCHANNEL_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.backchannel.token-cache-size]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.backchannel.token-cache-size[quarkus.oidc."tenant".logout.backchannel.token-cache-size]`


[.description]
--
Maximum number of logout tokens that can be cached before they are matched against ID tokens stored in session cookies.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__LOGOUT_BACKCHANNEL_TOKEN_CACHE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__LOGOUT_BACKCHANNEL_TOKEN_CACHE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.backchannel.token-cache-time-to-live]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.backchannel.token-cache-time-to-live[quarkus.oidc."tenant".logout.backchannel.token-cache-time-to-live]`


[.description]
--
Number of minutes a logout token can be cached for.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__LOGOUT_BACKCHANNEL_TOKEN_CACHE_TIME_TO_LIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__LOGOUT_BACKCHANNEL_TOKEN_CACHE_TIME_TO_LIVE+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10M`


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.backchannel.clean-up-timer-interval]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.backchannel.clean-up-timer-interval[quarkus.oidc."tenant".logout.backchannel.clean-up-timer-interval]`


[.description]
--
Token cache timer interval. If this property is set then a timer will check and remove the stale entries periodically.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__LOGOUT_BACKCHANNEL_CLEAN_UP_TIMER_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__LOGOUT_BACKCHANNEL_CLEAN_UP_TIMER_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.backchannel.logout-token-key]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.backchannel.logout-token-key[quarkus.oidc."tenant".logout.backchannel.logout-token-key]`


[.description]
--
Logout token claim whose value will be used as a key for caching the tokens. Only `sub` (subject) and `sid` (session id) claims can be used as keys. Set it to `sid` only if ID tokens issued by the OIDC provider have no `sub` but have `sid` claim.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__LOGOUT_BACKCHANNEL_LOGOUT_TOKEN_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__LOGOUT_BACKCHANNEL_LOGOUT_TOKEN_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`sub`


a| [[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.frontchannel.path]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.frontchannel.path[quarkus.oidc."tenant".logout.frontchannel.path]`


[.description]
--
The relative path of the Front-Channel Logout endpoint at the application.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC__TENANT__LOGOUT_FRONTCHANNEL_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC__TENANT__LOGOUT_FRONTCHANNEL_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
